Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -205,7 +205,7 @@ jobs:
           "FileContent" = $secureContent
           "FileExtension" = "$(itemExtension)"
           "CategoryId" = ${{ parameters.categodyID }},
-            "ItemMetaInfo": [
+            "ItemMetaInfo" = [
             {
             $($dataValues | ConvertTo-Json -Depth 10)
             }
