Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -207,7 +207,7 @@ jobs:
           "CategoryId" = ${{ parameters.categodyID }},
             "ItemMetaInfo" = [
             {
-            $($dataValues | ConvertTo-Json -Depth 10)
+            $dataValues
             }
             ]
         }
