--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -192,6 +192,8 @@ jobs:
       echo $dataValuesapi
       $dataValues = $dataValues | ConvertTo-Json -Depth 10
       echo $dataValues
+      $dataJson = $dataValues | ConvertTo-Json -Depth 10
+      echo $dataJson
       $apiUrl3 = "https://hotfix-linux.boldbi.com/bi/api/site/test/v4.0/dashboards/upload"  # Replace with your API endpoint
       $bearerToken = "$(Bearertokentarget)"  # Access the pipeline variable
 
