Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -204,6 +204,13 @@ jobs:
       echo $dataValues
       $dataJson = $dataValues | ConvertTo-Json -Depth 10
       echo $dataJson
+      # Request Body for this api
+      $requestBody = @{
+          "FileContent" = $secureContent
+          "FileExtension" = "$(itemExtension)"
+          "CategoryId" = ${{ parameters.categodyID }},
+            "ItemMetaInfo" = $dataJson
+        }
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl3 -Method Get -Headers $headers
 
