--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -208,9 +208,12 @@ jobs:
           "FileContent" = $secureContent
           "FileExtension" = "$(itemExtension)"
           "CategoryId" = ${{ parameters.categodyID }}
-            "ItemMetaInfo" = 
-             echo $dataJson
-        }
+          "ItemMetaInfo" = $dataJson
+           }
+
+      # Display the constructed request body
+      Write-Host "Request Body:"
+      Write-Host ($requestBody | ConvertTo-Json -Depth 10)
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl3 -Method Get -Headers $headers
 
