--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -205,6 +205,10 @@ jobs:
           "ItemMetaInfo" = $dataValues
            }
 
+      # Display the constructed request body
+      Write-Host "Request Body:"
+      Write-Host ($request | ConvertTo-Json -Depth 10)
+      
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers 
 
