--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -117,7 +117,7 @@ jobs:
       }
 
       # Send the GET request using the bearer token
-      $response = Invoke-RestMethod -Uri $apiUrl -Method Get -Headers $headers
+      $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers
 
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
@@ -208,7 +208,7 @@ jobs:
       # Display the constructed request body
       Write-Host "Request Body:"
       Write-Host ($request | ConvertTo-Json -Depth 10)
-      
+
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers 
 
