--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -150,12 +150,11 @@ jobs:
       $requestBodyJson = $requestBody | ConvertTo-Json -Depth 10
 
       # Send the POST request using the bearer token and request body
-      $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers 
+      $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers -Body $requestBodyJson
       # Extract the "Data" values and store them in a new variable
       $dataValues = $response.Data
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
-      echo "rk"
       echo $dataValues
     
       $apiUrl1 = "https://hotfix-linux.boldbi.com/bi/api/site/test/token"  # URL to get bearer token
@@ -210,7 +209,7 @@ jobs:
       Write-Host ($request | ConvertTo-Json -Depth 10)
 
       # Send the GET request using the bearer token
-      $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers 
+      $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers -Body $request  
 
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
