--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -207,9 +207,12 @@ jobs:
       # Display the constructed request body
       Write-Host "Request Body:"
       Write-Host ($request | ConvertTo-Json -Depth 10)
+      $requestBodyJson = $requestBody | ConvertTo-Json -Depth 10
+      $fullRequestBody = $requestBodyJson
+      Write-Host $fullRequestBody
 
       # Send the GET request using the bearer token
-      $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers -Body $request
+      $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers -Body $fullRequestBody
 
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
