--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -208,11 +208,9 @@ jobs:
       Write-Host "Request Body:"
       Write-Host ($request | ConvertTo-Json -Depth 10)
       $requestBodyJson = $requestBody | ConvertTo-Json -Depth 10
-      $fullRequestBody = $requestBodyJson
-      Write-Host $fullRequestBody
 
       # Send the GET request using the bearer token
-      $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers -Body $fullRequestBody
+      $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers -Body $requestBodyJson
 
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
