--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -207,7 +207,7 @@ jobs:
       # Display the constructed request body
       Write-Host "Request Body:"
       Write-Host ($request | ConvertTo-Json -Depth 10)
-      $requestBodyJson = $requestBody | ConvertTo-Json -Depth 10
+      $requestBodyJson = $request | ConvertTo-Json -Depth 10
 
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl3 -Method Post -Headers $headers -Body $requestBodyJson
