Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -225,5 +225,5 @@ jobs:
           "Content-Type" = "application/json"
       }
       $response = Invoke-RestMethod -Uri $apiUrl4 -Method Get -Headers $headers 
-
+      Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
   displayName: 'Upload the dashboard'
