Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,9 @@ parameters:
 - name: categodyID
   displayName: Please enter the catogory ID.
   type: string
+
 pool:
-  vmImage: ubuntu-latest
+  vmImage: Windows-latest
 
 jobs:
 
