Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ parameters:
   displayName: Please enter the sourcesite name like "https://<App_Base URL>/bi/site/<Site Name>"
   type: string
 - name: targetsitename
-  displayName: Please enter the sourcesite name like "https://<App_Base URL>/bi/site/<Site Name>"
+  displayName: Please enter the targetsite name like "https://<App_Base URL>/bi/site/<Site Name>"
   type: string
 - name: DashboardIDs
   displayName: Please enter the dashboard IDs (comma-separated). Enter "All" for all dashboards.
