--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
       $sourceSiteName = '${{ parameters.sourcesitename }}'
       $sourceSiteName = $sourceSiteName -replace '^"(.*)"$', '$1'
       Write-Host "Source Site Name without Quotes: $sourceSiteName"
-      $apiUrl = "$sourceSiteName/token"  # URL to get bearer token
+      $apiUrl = "($sourceSiteName)/token"  # URL to get bearer token
       $credentials = @{
           grant_type = "password"
           username = "admin"
