Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,7 @@ jobs:
 - job: GetBearerToken
   steps:
   - powershell: |
+      echo $sourcesite
       $apiUrl = $sourcesite+"/token"  # URL to get bearer token
       $credentials = @{
           grant_type = "password"
