Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,10 @@ jobs:
 
 - job: GetBearerToken
   steps:
-  - powershell: |
-      echo $sourcesite
+  - script: |
+     echo $sourcesite
+     echo '${{ parameters.sourcesitename }}'
+  - powershell: | 
       $apiUrl = $sourcesite+"/token"  # URL to get bearer token
       $credentials = @{
           grant_type = "password"
