Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,7 @@ jobs:
 - job: GetBearerToken
   steps:
   - script: |
-     echo $sourcesite
-     echo '${{ parameters.sourcesitename }}'
+     echo ${{ parameters.sourcesitename }}
   - powershell: | 
       $apiUrl = $sourcesite+"/token"  # URL to get bearer token
       $credentials = @{
