--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
   - script: |
      echo ${{ parameters.sourcesitename }}
   - powershell: | 
-      $apiUrl = $sourcesite+"/token"  # URL to get bearer token
+      $apiUrl = ${{ parameters.sourcesitename }}/token"  # URL to get bearer token
       $credentials = @{
           grant_type = "password"
           username = "admin"
