--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
   steps:
   - script: |
      echo ${{ parameters.sourcesitename }}
-  - powershell: | 
+  - script: | 
       $apiUrl = ${{ parameters.sourcesitename }}/token  # URL to get bearer token
       echo $apiUrl
       $credentials = @{
