--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,7 +133,7 @@ jobs:
       $itemContent = $response.Data.ItemContent
       $itemExtension = $response.Data.ItemExtension
 
-      $apiUrl = "${{ parameters.sourcesitename }}/v4.0/dashboards/upload/meta"  # Replace with your API endpoint
+      $apiUrl11 = "${{ parameters.sourcesitename }}/v4.0/dashboards/upload/meta"  # Replace with your API endpoint
       $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
 
       $headers = @{
@@ -149,7 +149,7 @@ jobs:
       $requestBodyJson = $requestBody | ConvertTo-Json -Depth 10
 
       # Send the POST request using the bearer token and request body
-      $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers -Body $requestBodyJson
+      $response = Invoke-RestMethod -Uri $apiUrl11 -Method Post -Headers $headers -Body $requestBodyJson
       # Extract the "Data" values and store them in a new variable
       $dataValues = $response.Data
       # Display the response
