Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,10 +123,30 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
+      # Wait for a short interval before checking again
+      Start-Sleep -Seconds 10s
 
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
 
+      # Wait for a short interval before checking again
+      Start-Sleep -Seconds 10s
+      
+      # Send the GET request using the bearer token
+      $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
+      
+      # Wait for a short interval before checking again
+      Start-Sleep -Seconds 10s
+      
+      # Send the GET request using the bearer token
+      $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
+
+      # Wait for a short interval before checking again
+      Start-Sleep -Seconds 10s
+      
+      # Send the GET request using the bearer token
+      $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
+      
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
      
