Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -124,25 +124,25 @@ jobs:
           "Content-Type" = "application/json"
       }
       # Wait for a short interval before checking again
-      Start-Sleep -Seconds 10s
+      Start-Sleep -Seconds 10
 
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
 
       # Wait for a short interval before checking again
-      Start-Sleep -Seconds 10s
+      Start-Sleep -Seconds 10
       
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
       
       # Wait for a short interval before checking again
-      Start-Sleep -Seconds 10s
+      Start-Sleep -Seconds 10
       
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
 
       # Wait for a short interval before checking again
-      Start-Sleep -Seconds 10s
+      Start-Sleep -Seconds 10
       
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl0 -Method Get -Headers $headers
