--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,20 @@ parameters:
 - name: sourcesitename
   displayName: Please enter the sourcesite name like "https://<App_Base URL>/bi/site/<Site Name>"
   type: string
+- name: sourcesiteusername
+  displayName: Please enter the Admin User of the source site.
+  type: string
+- name: sourcesitepassword
+  displayName: Please enter the Admin User password of the source site.
+  type: string
 - name: targetsitename
   displayName: Please enter the targetsite name like "https://<App_Base URL>/bi/site/<Site Name>"
+  type: string
+- name: targetsiteusername
+  displayName: Please enter the Admin User of the source site.
+  type: string
+- name: targetsitepassword
+  displayName: Please enter the Admin User password of the source site.
   type: string
 - name: DashboardIDs
   displayName: Please enter the dashboard IDs (comma-separated). Enter "All" for all dashboards.
@@ -17,9 +29,6 @@ parameters:
 - name: categodyID
   displayName: Please enter the catogory ID.
   type: string
-variables:
-- name: sourcesite
-  value: ${{ parameters.sourcesitename }}
 pool:
   vmImage: Windows-latest
 
@@ -32,8 +41,8 @@ jobs:
       echo $apiUrl
       $credentials = @{
           grant_type = "password"
-          username = "admin"
-          password = "Admin@123"
+          username = "${{ parameters.sourcesiteusername }}"
+          password = "${{ parameters.sourcesitepassword }}"
       }
       
       $tokenResponse = Invoke-RestMethod -Uri $apiUrl -Method Post -Body $credentials
